--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -337,8 +337,9 @@
 
 
     <!-- Trainings -->
-    <div class="zoom__meetings sp_bottom_70" data-aos="fade-up">
-        <div class="container full__width__padding">
+    {% comment %} <div class="zoom__meetings sp_bottom_70" data-aos="fade-up"> {% endcomment %}
+    <div class="gridarea__2 sp_bottom_100 sp_top_80" data-aos="fade-up">
+        <div class="container-fluid full__width__padding">
 
             <div class="section__title">
                 <div class="section__title__heading">
