--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -560,7 +560,7 @@
 
     <!-- Research -->
     <div class="blogarea__2 sp_top_100 sp_bottom_100">
-        <div class="container">
+        <div class="container-fluid full__width__padding">
             <div class="row">
                 <div class="col-xl-12" data-aos="fade-up">
                     <div class="section__title__2 text-center teamarea__margin">
@@ -744,10 +744,10 @@
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                     <div class="section__title__2" data-aos="fade-up">
                         <div class="section__small__title">
-                            <span>Education Solution</span>
+                            {% comment %} <span>Education Solution</span> {% endcomment %}
                         </div>
                         <div class="section__title__heading__2 section__title__heading__3 heading__fontsize__2">
-                            <h2>Client Testimonial About Our Lms Agency</h2>
+                            <h2>Feedback</h2>
                         </div>
                     </div>
 
@@ -783,7 +783,7 @@
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" data-aos="fade-up">
                     <div class="testimonial__group__img" data-tilt>
-                        <img loading="lazy" src="{% static 'img/testimonial/testi__group__1.png' %}" alt="">
+                        <img loading="lazy" src="{% static 'img/review.png' %}" alt="">
                     </div>
                 </div>
             </div>
