--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -738,7 +738,7 @@
 
     <!-- testimonial__section__start -->
     {% if training_comments %}
-    <div class="testimonialarea__3">
+    <div class="testimonialarea__3" style="padding-top: 50px; padding-bottom: 0px;">
         <div class="container">
             <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
@@ -791,11 +791,6 @@
     </div>
     {% endif %}
     <!-- testimonial__section__start -->
-
-
-
-
-
 
 
 
