--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -700,7 +700,7 @@
                   <div class="default__small__button">Connect</div>
                 </div>
                 <div class="section__title__heading heading__underline">
-                  <h2>Register Your Account Get free access to <small>60000</small> online course
+                  <h2>Register Your Account Get free access to <small>Bioinformatics</small> online course
                   </h2>
                 </div>
               </div>
